Add block api
